<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:src="@drawable/beer_wp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/code_fenix_logo" />

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_edit_bg"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etSenhaLogin"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/login_edit_bg"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLogin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="123dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/entrar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/iniciarSessao"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/login_button_bg"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/iniciarSessao"
        android:textAllCaps="false"
        android:textColor="@color/snow_white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenhaLogin"
        app:layout_constraintVertical_bias="0.086" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginWithGoogle"
        android:layout_width="118dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/google_button_bg"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/gmail"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/google_red"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginWithFacebook"
        android:layout_width="118dp"
        android:layout_height="45dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/facebook_button_bg"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/facebook"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/facebook_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="181dp"
        android:layout_height="35dp"
        android:layout_marginTop="104dp"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/criarConta"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSessao" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="106dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/acesse"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSessao" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSessao"
        app:srcCompat="@drawable/red_rectangle" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSessao"
        app:srcCompat="@drawable/red_rectangle" />


</androidx.constraintlayout.widget.ConstraintLayout>