<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login_bg">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="246dp"
        android:scaleType="centerCrop"
        android:src="@drawable/beer_wp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/code_fenix_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/seusDados"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVoltaLogin"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/entrar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastre" />

    <EditText
        android:id="@+id/etEmailCreate"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_edit_bg"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:hint="@string/inserirEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/login_edit_bg"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailCreate"
        app:layout_constraintVertical_bias="0.068" />

    <EditText
        android:id="@+id/etSenhaCreate"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/login_edit_bg"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailCreate" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCadastre"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_bg"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/cadastre"
        android:textAllCaps="false"
        android:textColor="@color/snow_white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenhaCreate" />


</androidx.constraintlayout.widget.ConstraintLayout>